Small cleanup of InitializedVariablesTest